Tue Mar  6 10:45:45 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkbutton.c: Add animation of activation by, on 
	activate, pressing the button, and adding a timeout that 
	releases the button after 250ms	or on key release and
	emits ::clicked. (#51501)

	* gtk/gtkdialog.c: Bit of a hack - for buttons in the
	action area, we connect to ::clicked instead of ::activate
	so the dialog stays up through the animation.

Mon Mar  5 16:38:15 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenushell.c (gtk_menu_shell_enter_notify): Only
	check the ignore_enter flag for the menu shell that
	the item is actually a child of, not for attached
	submenus. (#51536)

Tue Feb 27 02:16:14 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_propagate_event): Only do special
        special key-press grab handling for widgets within
        GtkWindows. Otherwise, fall through to normal case.

        This prevents key events being sent twice to GtkInvisible
        widgets, which can cause all sorts of mischief.

Fri Feb  2 13:20:12 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_propagate_event): When a grab
	widget is in effect, give the grab widget a first
	crack at KEY_PRESS/RELEASE events. (#424)

2001-03-06  James Henstridge  <james@daa.com.au>

	* gtk/gtkwidget.c (gtk_widget_class_init): set the class closure
	offset for the window_state_event to point at window_state_event
	rather than no_expose_event.

Mon Mar  5 19:10:15 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkimmodule.h: fix busted /* comment */

Mon Mar  5 15:07:05 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c: Apply patch from John Margaglione to add
	object properties.

Mon Mar  5 14:55:19 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkcellrenderertoggle.c: Apply patch from Lee Mallabone to
	add object properties.

	* gtk/gtkcellrenderertextpixbuf.c: Apply patch from Lee Mallabone
	to add object properties.
